Fixed color contrast on indexes page

--- a/mayan/apps/appearance/static/appearance/css/base.css
+++ b/mayan/apps/appearance/static/appearance/css/base.css
@@ -96,7 +96,7 @@ hr {
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 1);
     white-space: normal;
 }
-
+  
 .radio ul li {
     list-style-type:none;
 }
@@ -394,7 +394,7 @@ a i {
 }
 
 .btn-danger.btn-outline {
-    color: #d9534f;
+    color: #863431;
 }
 
 .btn-default.btn-outline:hover,
@@ -648,4 +648,8 @@ a i {
     padding-top: 0px;
     padding-left: 0px;
     padding-right: 0px;
+}
+
+.well a {
+    color:black;
 }
